# carrier

./: Cargo.toml  README.md  build.rs  doopenwrt.sh  rsbuild.sh  zz.toml
proto/: captif.proximity.v1.proto  captif.v1.proto
src/: genesis.zz  main.rs  main.zz  proto.zz  proximity.rs  watchdog.c
