[package]
name = "carrier-captif"
version = "0.1.0"
edition = "2018"

[dependencies]
tinylogger          = "0.1"
carrier_rs          = { path = '/home/aep/proj/devguard/carrier_rs' , features=['openwrt']}
devguard-genesis    = { path = '../genesis' , features=['openwrt']}
osaka               = "0.3"
sha2                = "0.7"
pcap                = "0.7.0"
radiotap            = "1.3.0"
enum_primitive      = "0.1.1"
log                 = "0.4"
mio-extras          = "2.0.5"
prost               = "0.5.0"
bytes               = "0.4.0"
libc                = "0.2"
chrono              = "0.4"
rand                = "0.6"
nix                 = "0.15"


[profile.release]
lto = true
opt-level = "z"
panic = 'abort'
incremental = false

[build-dependencies]
prost-build = "0.5.0"
cc = "1.0"
